[metadata]
name = keystone-pamchecker
summary = OpenStack Identity Driver
author = Gary Sangwell
author_email = gary.sangwell@alces-software.com
python_requires = >=3.6

[files]
packages =
	keystone_pamchecker

[entry_points]
keystone.identity = 
        pamchecker = keystone_pamchecker.identity.backends.pamchecker:Identity
